--- a/PyCycle3.ipynb
+++ b/PyCycle3.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "PyCycle3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPuXRiXLHx7L+40AM99L2Zf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,14 +33,14 @@
         "outputId": "af055fb2-fed9-476a-cfaf-a1da78971b81"
       },
       "source": [
-        "#1.\r\n",
-        "num=int(input('enter a number'))\r\n",
-        "f=1\r\n",
-        "for i in range(1,num+1):\r\n",
-        "  f=f*i\r\n",
+        "#1.\n",
+        "num=int(input('enter a number'))\n",
+        "f=1\n",
+        "for i in range(1,num+1):\n",
+        "  f=f*i\n",
         "print ('factorial of', num, '=',f)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,21 +62,21 @@
         "outputId": "518de794-c62c-4b38-ffe3-429d0797f603"
       },
       "source": [
-        "#2.\r\n",
-        "n = int(input(\"Enter the value of 'n': \"))\r\n",
-        "a = 0\r\n",
-        "b = 1\r\n",
-        "sum = 0\r\n",
-        "count = 1\r\n",
-        "print(\"Fibonacci Series: \", end = \" \")\r\n",
-        "while(count <= n):\r\n",
-        "  print(sum, end = \" \")\r\n",
-        "  count += 1\r\n",
-        "  a = b\r\n",
-        "  b = sum\r\n",
+        "#2.\n",
+        "n = int(input(\"Enter the value of 'n': \"))\n",
+        "a = 0\n",
+        "b = 1\n",
+        "sum = 0\n",
+        "count = 1\n",
+        "print(\"Fibonacci Series: \", end = \" \")\n",
+        "while(count <= n):\n",
+        "  print(sum, end = \" \")\n",
+        "  count += 1\n",
+        "  a = b\n",
+        "  b = sum\n",
         "  sum = a + b"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,23 +95,61 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KUG3bvxn9qqp",
-        "outputId": "add4ec4f-b13d-4759-8085-061a11ec80a3"
+        "outputId": "4e3f3dfd-3267-4961-8fcb-4810137519be"
       },
       "source": [
-        "#3.\r\n",
-        "def sum_list(items):\r\n",
-        "    sum_numbers = 0\r\n",
-        "    for x in items:\r\n",
-        "        sum_numbers += x\r\n",
-        "    return sum_numbers\r\n",
-        "print(sum_list([1,2,4]))\r\n"
+        "#3.\n",
+        "NumList=[]\n",
+        "number=int(input(\"Please enter the Total Number of List Elements:\"))\n",
+        "for i in range(1,number+1):\n",
+        "  value=int(input(\"Please enter the value of %d Element:\" %i))\n",
+        "  NumList.append(value)\n",
+        "total=sum(NumList)\n",
+        "print(\"\\n The Sum of all Elements in this List is:\" ,total)\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Please enter the Total Number of List Elements:3\n",
+            "Please enter the value of 1 Element:4\n",
+            "Please enter the value of 2 Element:6\n",
+            "Please enter the value of 3 Element:5\n",
+            "\n",
+            " The Sum of all Elements in this List is: 15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C6Xvy80fNnyx",
+        "outputId": "c59767ef-8072-4b3e-caf2-6709acc67106",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#4.\n",
+        "for i in range(1000,10000):\n",
+        "   for j in range(32,100):\n",
+        "    if i == j * j:\n",
+        "       a=str(i)\n",
+        "       if (int(a[0]) % 2 == 0 and int(a[1]) % 2 == 0 and int(a[2]) % 2 ==0 and int(a[3]) % 2 ==0):\n",
+        "          print(i)\n"
       ],
       "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "7\n"
+            "4624\n",
+            "6084\n",
+            "6400\n",
+            "8464\n"
           ],
           "name": "stdout"
         }
@@ -125,26 +162,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JCZH5Zgg-F8Z",
-        "outputId": "5b67d208-e9fc-4686-c1b8-7708a19236e7"
+        "outputId": "a8e88650-5f35-41c5-b429-23fecd2a55d4"
       },
       "source": [
-        "#5.\r\n",
-        "rows = 5\r\n",
-        "for row in range(1, rows+1):\r\n",
-        "    for column in range(1, row + 1):\r\n",
-        "        print(column, end=' ')\r\n",
-        "    print(\"\")"
+        "#5.\n",
+        "def py(n):\n",
+        "  x=1\n",
+        "  for i in range(1, n+1):\n",
+        "    for j in range(1, i+1):\n",
+        "      print(x, end=\" \")\n",
+        "      x=x+i\n",
+        "    x=i+1\n",
+        "    print(\"\\r\")\n",
+        "n=int(input(\"Enter the limit : \"))\n",
+        "py(n)\n"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Enter the limit : 4\n",
             "1 \n",
-            "1 2 \n",
-            "1 2 3 \n",
-            "1 2 3 4 \n",
-            "1 2 3 4 5 \n"
+            "2 4 \n",
+            "3 6 9 \n",
+            "4 8 12 16 \n"
           ],
           "name": "stdout"
         }
@@ -160,19 +202,19 @@
         "outputId": "01f11663-0e4b-442d-da35-52d6a77b7481"
       },
       "source": [
-        "#6.\r\n",
-        "def char_frequency(str1):\r\n",
-        "    dict = {}\r\n",
-        "    for n in str1:\r\n",
-        "        keys = dict.keys()\r\n",
-        "        if n in keys:\r\n",
-        "            dict[n] += 1\r\n",
-        "        else:\r\n",
-        "            dict[n] = 1\r\n",
-        "    return dict\r\n",
+        "#6.\n",
+        "def char_frequency(str1):\n",
+        "    dict = {}\n",
+        "    for n in str1:\n",
+        "        keys = dict.keys()\n",
+        "        if n in keys:\n",
+        "            dict[n] += 1\n",
+        "        else:\n",
+        "            dict[n] = 1\n",
+        "    return dict\n",
         "print(char_frequency('google.com'))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,32 +232,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zpx8ZxzkZPIY",
-        "outputId": "bcb12214-c205-4d18-ecb8-55bba0e19d01"
+        "outputId": "e82336f5-d683-4008-a7bb-bb1fe357ed18"
       },
       "source": [
-        "#7.\r\n",
-        "def add_string(str1):  \r\n",
-        "  length = len(str1)  \r\n",
-        "  \r\n",
-        "  if length > 2:  \r\n",
-        "    if str1[-3:] == 'ing':  \r\n",
-        "      str1 += 'ly'  \r\n",
-        "    else:  \r\n",
-        "      str1 += 'ing'  \r\n",
-        "  \r\n",
-        "  return str1  \r\n",
-        "print(add_string('ab'))  \r\n",
-        "print(add_string('abc'))  \r\n",
-        "print(add_string('string'))  "
+        "#7.\n",
+        "def add_string(str1):\n",
+        "   length=len(str1)\n",
+        "   if length > 1:\n",
+        "      if str1[-3:] == 'ing':\n",
+        "       str1 += 'ly'\n",
+        "      else:\n",
+        "        str1 +='ing'\n",
+        "   return str1\n",
+        "print(add_string('speak'))\n",
+        "print(add_string('dance'))\n",
+        "print(add_string('singing')) "
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "ab\n",
-            "abcing\n",
-            "stringly\n"
+            "speaking\n",
+            "danceing\n",
+            "singingly\n"
           ],
           "name": "stdout"
         }
@@ -231,18 +271,18 @@
         "outputId": "a1fe06cd-a8ef-4eea-a334-1b592099109c"
       },
       "source": [
-        "#8.\r\n",
-        "def find_longest_word(words_list):\r\n",
-        "    word_len = []\r\n",
-        "    for n in words_list:\r\n",
-        "        word_len.append((len(n), n))\r\n",
-        "    word_len.sort()\r\n",
-        "    return word_len[-1][0], word_len[-1][1]\r\n",
-        "result = find_longest_word([\"Fruits\", \"vegetables\", \"Water\"])\r\n",
-        "print(\"\\nLongest word: \",result[1])\r\n",
+        "#8.\n",
+        "def find_longest_word(words_list):\n",
+        "    word_len = []\n",
+        "    for n in words_list:\n",
+        "        word_len.append((len(n), n))\n",
+        "    word_len.sort()\n",
+        "    return word_len[-1][0], word_len[-1][1]\n",
+        "result = find_longest_word([\"Fruits\", \"vegetables\", \"Water\"])\n",
+        "print(\"\\nLongest word: \",result[1])\n",
         "print(\"Length of the longest word: \",result[0])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,38 +302,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uWRPeO14acU3",
-        "outputId": "66170794-c37b-45c2-a478-20f0dcfe99ad"
+        "outputId": "ecc5e3de-be71-4589-df35-8e6e5a99cc53"
       },
       "source": [
-        "#9.\r\n",
-        "n=6;\r\n",
-        "for i in range(n):\r\n",
-        "    for j in range(i):\r\n",
-        "        print ('* ', end=\"\")\r\n",
-        "    print('')\r\n",
-        "\r\n",
-        "for i in range(n,0,-1):\r\n",
-        "    for j in range(i):\r\n",
-        "        print('* ', end=\"\")\r\n",
-        "    print('')"
+        "#9.\n",
+        "n=int(input(\"How many lines you want? : \"))\n",
+        "m= (2 * n) - 2\n",
+        "for i in range(0, n):\n",
+        "    for j in range(0, m):\n",
+        "       print(end=\" \")\n",
+        "    m = m - 1\n",
+        "    for j in range(0, i+1):\n",
+        "        print(\" * \", end=' ')\n",
+        "    print(\" \")\n"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\n",
-            "* \n",
-            "* * \n",
-            "* * * \n",
-            "* * * * \n",
-            "* * * * * \n",
-            "* * * * * * \n",
-            "* * * * * \n",
-            "* * * * \n",
-            "* * * \n",
-            "* * \n",
-            "* \n"
+            "How many lines you want? : 5\n",
+            "         *   \n",
+            "        *   *   \n",
+            "       *   *   *   \n",
+            "      *   *   *   *   \n",
+            "     *   *   *   *   *   \n"
           ],
           "name": "stdout"
         }
@@ -306,38 +339,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WEcsuk8EajMP",
-        "outputId": "bcb515fc-a76c-4be9-9aa8-419fea544827"
+        "outputId": "f1600fbb-bd28-4434-c6c4-c19c5d644899"
       },
       "source": [
-        "#10.\r\n",
-        "def print_factors(x):\r\n",
-        "   print(\"The factors of\",x,\"are:\")\r\n",
-        "   for i in range(1, x + 1):\r\n",
-        "       if x % i == 0:\r\n",
-        "           print(i)\r\n",
-        "num = 320\r\n",
-        "print_factors(num)"
+        "#10.\n",
+        "num=int(input(\"Enter a Number: \"))\n",
+        "factors=[]\n",
+        "for i in range(1,num+1):\n",
+        "    if num%i==0:\n",
+        "       factors.append(i)\n",
+        "print(\"Factors of {} = {} \".format(num,factors))\n",
+        " \n"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The factors of 320 are:\n",
-            "1\n",
-            "2\n",
-            "4\n",
-            "5\n",
-            "8\n",
-            "10\n",
-            "16\n",
-            "20\n",
-            "32\n",
-            "40\n",
-            "64\n",
-            "80\n",
-            "160\n",
-            "320\n"
+            "Enter a Number: 120\n",
+            "Factors of 120 = [1, 2, 3, 4, 5, 6, 8, 10, 12, 15, 20, 24, 30, 40, 60, 120] \n"
           ],
           "name": "stdout"
         }
@@ -353,20 +373,20 @@
         "outputId": "a244912a-93d0-417d-cfa4-3c3aa4c4a855"
       },
       "source": [
-        "#11.\r\n",
-        "square_area = lambda l: l*l\r\n",
-        "l = int(input(\"Enter length of the square:\"))\r\n",
-        "print(\"Area of the square : \",square_area(l))\r\n",
-        "rect_area = lambda l,b :l * b\r\n",
-        "l = int(input(\"Enter length of the rectangle:\"))\r\n",
-        "b = int(input(\"Enter breadth of the rectangle:\"))\r\n",
-        "print(\"Area of the rectangle : \",rect_area(l,b))\r\n",
-        "triangle_area = lambda b ,h :0.5*b *h\r\n",
-        "b = int(input(\"Enter base of the triangle:\"))\r\n",
-        "h = int(input(\"Enter height of the triangle:\"))\r\n",
+        "#11.\n",
+        "square_area = lambda l: l*l\n",
+        "l = int(input(\"Enter length of the square:\"))\n",
+        "print(\"Area of the square : \",square_area(l))\n",
+        "rect_area = lambda l,b :l * b\n",
+        "l = int(input(\"Enter length of the rectangle:\"))\n",
+        "b = int(input(\"Enter breadth of the rectangle:\"))\n",
+        "print(\"Area of the rectangle : \",rect_area(l,b))\n",
+        "triangle_area = lambda b ,h :0.5*b *h\n",
+        "b = int(input(\"Enter base of the triangle:\"))\n",
+        "h = int(input(\"Enter height of the triangle:\"))\n",
         "print(\"Area of the triangle : \",triangle_area(b,h))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
